Fix 1px gap between code lines

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -87,7 +87,7 @@ pre {
 	display: block;
 	background-color: #2c2c2c;
 	color: #fff;
-	line-height: 1.1em;
+	line-height: 19px;
 	overflow-x: auto;
 
 	.linenums {
